p2/scripts/kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /app1
          pathType: Prefix
          backend:
            service:
              name: app-one-service
              port:
                number: 8080
        - path: /app2
          pathType: Prefix
          backend:
            service:
              name: app-two-service
              port:
                number: 8080
        - path: /app3
          pathType: Prefix
          backend:
            service:
              name: app-three-service
              port:
                number: 8080
        - path: /coconut
          pathType: Prefix
          backend:
            service:
              name: coconut-service
              port:
                number: 8080
